时间轴页面

--- a/app.json
+++ b/app.json
@@ -1,12 +1,14 @@
 {
   "pages":[
+     "pages/timeLine/timeLine",
+     "pages/detail/detail",
     "pages/index/index",
     "pages/logs/logs"
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarBackgroundColor": "#eeeff1",
+    "navigationBarTitleText": "中欧",
     "navigationBarTextStyle":"black"
   }
 }
