--- a/app.json
+++ b/app.json
@@ -1,6 +1,10 @@
 {
   "pages":[
-	  "pages/timeLine/timeLine",
+    "pages/eventPublish/eventPublish",
+    "pages/descriptionModuleAdd/descriptionModuleAdd",
+    "pages/voteModuleAdd/voteModuleAdd",
+    "pages/testModuleAdd/testModuleAdd",
+    "pages/timeLine/timeLine",
     "pages/personCenter/personCenter",
     "pages/myCard/myCard",
     "pages/declaration/declaration",
